centered svg logo and text

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@ var _wpmejsSettings = {"pluginPath":"\/rwh-1\/wp-includes\/js\/mediaelement\/","
 				<div class="transition-wrap">
 					<div class="sections">
 					
-					<section id="section_ai64j9qrs" class="content-block" data-column-mode-sm="single" data-column-mode-xs="single">
+					<section id="section_ai64j9qrs" class="content-block" data-column-mode-sm="single" data-column-mode-xs="single" data-align="center">
 						
-						<div class="container">
-								<svg class="logo" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2048.674 2048.674">
+						<div class="container"  style="text-align:center;" >
+								<svg class="logo" style="display: block; margin:0 auto;" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2048.674 2048.674"  preserveAspectRatio="xMaxYMax meet">
 									<g id="document" transform="matrix(1,0,0,1,1024.0,1024.0)">
 										<g>
 										 <path class="logoAni" d="M898.605,863.352 L-874.752,179.884 L898.605,-502.209" stroke-width="32.01" fill="none" stroke="#8a8a8a" stroke-linecap="square" />
