--- a/tea/index.html
+++ b/tea/index.html
@@ -1,3 +1,33 @@
 
+<meta http-equiv="refresh" content="0; URL=https://adibhatt95.wixsite.com/my-site/post/50-best-teas" />
 
-<iframe src="https://adibhatt95.wixsite.com/my-site/post/50-best-teas" title="Aditya Bhatt's Tea" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
+<!-- <!DOCTYPE html>
+<head>
+<style>
+.myIframe {
+  position: relative;
+  padding-bottom: 65.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; /*<<--- THIS IS THE KEY*/ 
+  border: solid black 1px;
+}
+
+.myIframe iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+</style>
+
+</head>
+
+<body>
+	<div class="myIframe">
+		<iframe src="https://adibhatt95.wixsite.com/my-site/post/50-best-teas" title="Aditya Bhatt's Tea" ></iframe> !style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
+	</div>
+<body>
+	-->
